RESOLVED FIXED178808
REGRESSION: Web Inspector: context menu actions "Download Image" and "Open Image in New Window" don't work
https://bugs.webkit.org/show_bug.cgi?id=178808
Summary REGRESSION: Web Inspector: context menu actions "Download Image" and "Open Im...
Blaze Burg
Reported 2017-10-25 10:23:44 PDT
This reproduces for data URL images as well as normal images. This may have regressed with recent changes to adopt WKWebInspectorView on Mac port.
Attachments
[PATCH] Proposed Fix (6.17 KB, patch)
2017-11-28 12:05 PST, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2017-10-25 10:24:20 PDT
Joseph Pecoraro
Comment 2 2017-11-28 12:05:01 PST
Created attachment 327769 [details] [PATCH] Proposed Fix
Blaze Burg
Comment 3 2017-11-28 12:42:14 PST
Comment on attachment 327769 [details] [PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 4 2017-11-28 13:02:30 PST
Comment on attachment 327769 [details] [PATCH] Proposed Fix Clearing flags on attachment: 327769 Committed r225234: <https://trac.webkit.org/changeset/225234>
WebKit Commit Bot
Comment 5 2017-11-28 13:02:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.