REGRESSION: Web Inspector: context menu actions "Download Image" and "Open Image in New Window" don't work https://bugs.webkit.org/show_bug.cgi?id=178808 <rdar://problem/35176608>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-11-28
Reviewed by Brian Burg.

* UIProcess/mac/WKInspectorViewController.mm:
(-[WKInspectorViewController _webView:contextMenu:forElement:]):
Continue to hide the image context menu actions like we used to.
Investigating making these context menus work can be done as a
follow-up task.

* UIProcess/mac/WKWebInspectorWKWebView.mm:
(-[WKWebInspectorWKWebView initWithFrame:configuration:]):
Use nullptr instead of 0.

Canonical link: https://commits.webkit.org/196095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225234 268f45cc-cd09-0410-ab3c-d52691b4dbfc